--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   xml: ^6.5.0
   http: ^1.2.2
+  flutter_dotenv: ^5.0.2
+  mssql_connection: ^1.0.0
+  flutter_staggered_grid_view: ^0.6.2
 
 
   # The following adds the Cupertino Icons font to your application.
